methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:7: error: Missing closing brace `}' assumed here
def pushpt(x:Int, y:Int) = { 
^