methods.picture.PictureMono2.scala.code

  for (i<- 1 to 4){
    makeLigne0(3,0+i*7)
    
    makeLigne0c(4,3+i*7)

def pushpt(x:Int, y:Int) = { 
  setPos(x,y);
	brushDown();
  brushUp();
  setPos(0,20)
}


def makeLigne0(nb:Int, ligne:Int){
    for (i <- 1 to nb){
    makeO(ligne, 3+7*i)
  }
}

def makeLigne0c(nb:Int, ligne:Int){
    for (i <- 1 to nb){
    makeOcouche(ligne, 0+7*i)
  }
}

def makeO(x:Int,y:Int) = {
  var arr = Array( x-1,y, x+1,y, x,y-2, x,y+1, x-1,y-1, x+1, y-1 );
  for (i <- 0 to 3) {
    var xx = arr(2*i);
    var yy = arr(2*i+1);
    if (xx >=0 && yy >=0 && xx < 7 && yy <7)
    	pushpt(xx,yy);
  }
}

def makeOcouche(x:Int,y:Int) = {
  var arr = Array( x-1,y, x+1,y, x,y-2, x,y+1, x-1,y-1, x+1, y-1 );
  for (i <- 0 to 3) {
    var yy = arr(2*i);
    var xx = arr(2*i+1);
    if (xx >=0 && yy >=0 && xx < 7 && yy <7)
    	pushpt(xx,yy);
  }
}